fixed z-index issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,4 +21,5 @@
 	object-fit: cover;
 	position: sticky;
     bottom: 0;
+    z-index: 0;
 }
