--- a/src/components/TitleSection.scss
+++ b/src/components/TitleSection.scss
@@ -5,6 +5,7 @@
 	flex-direction: column;
 	height: fit-content;
 	width: 100vw;
+    z-index: 1;
 }
 
 .title--inner-container {
